--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 # Auto detect text files and perform LF normalization
-* text=auto
+*.kotlin linguist-detectable=true 
+*.java linguist-detectable=false 
